--- a/Sample XSS Report.html
+++ b/Sample XSS Report.html
@@ -1,3 +1,7 @@
+
+# The below HTML Code is a replication of the sample report shown in the readMe images
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
